// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WhyPaused should pause reason with message 1`] = `
<div
  className="pane why-paused"
>
  <div>
    <div
      className="pause reason"
    >
      Paused on breakpoint
    </div>
    <div
      className="message"
    >
      bla is hit
    </div>
  </div>
</div>
`;

exports[`WhyPaused should show an empty div when there is no pause reason 1`] = `
<div
  className=""
/>
`;

exports[`WhyPaused should show pause reason with exception details 1`] = `
<div
  className="pane why-paused"
>
  <div>
    <div
      className="pause reason"
    >
      Paused on exception
    </div>
    <div
      className="message warning"
    >
      ReferenceError: o is not defined
    </div>
  </div>
</div>
`;

exports[`WhyPaused should show pause reason with exception string 1`] = `
<div
  className="pane why-paused"
>
  <div>
    <div
      className="pause reason"
    >
      Paused on exception
    </div>
    <div
      className="message warning"
    >
      Not Available
    </div>
  </div>
</div>
`;
